Added swagger documentation for CartController@index
