# app/Swagger/OpenApi.php
@@ -25,6 +25,13 @@ use OpenApi\Attributes as OA;
     scheme: "bearer"
 )]
 
+#[OA\SecurityScheme(
+    securityScheme: 'guest_token',
+    type: 'apiKey',
+    description: 'Token for guest cart identification generated by frontend',
+    name: 'X-Guest-Token',
+    in: 'header'
+)]
 class OpenApi
 {
 }
